--- a/gary_app_h5/about.html
+++ b/gary_app_h5/about.html
@@ -86,6 +86,10 @@
         </div>
         <div class="aboutHtml">
         </div>
+        <div>
+           If "about" and "contact" page missing content, they need a backend server run the
+           gary_app_server service, to vizualize the data which storged in the backend server.
+        </div>
         <!-- A row to hold three cards for the Coke, Sprite and Pepper contents -->
 
     </div>  <!-- End home page contents-->
@@ -127,13 +131,11 @@
         <div class="navbar-text float-left copyright">
             <p><span class="align-baseline">These web pages are submitted as part requirement for the degree of Games and Multimedia Environments at the University of Sussex.  They are the product of my own labour except where indicated in the web page content. These web pages or contents may be freely copied and distributed provided the source is acknowledged | </span></p>
         </div>
-        <!--        <div class="navbar-text float-right social">-->
-        <!--            <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-google-plus fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-github-square fa-2x"></i></a>-->
-        <!--        </div>-->
+               <div class="navbar-text float-right social">
+              <a href="https://github.com/GayRy/Web-3D-Assignment-Submission"><i class="fab fa-github-square fa-2x"></i></a>
+             </div>
     </div>
+</nav>
 </nav>
 <!-- My 3D App modals -->
 <!-- Contact modal -->
