--- a/gary_app_h5/index.html
+++ b/gary_app_h5/index.html
@@ -77,9 +77,9 @@
             <div class="col-sm-12">
                 <div id="main_3d_image">
                     <div id="main_text" class="col-xs-12 col-sm-4">
-                        <div id="title_home"></div>
-                        <div id="subTitle_home"></div>
-                        <div id="description_home"></div>
+                        <div id="title_home">12313</div>
+                        <div id="subTitle_home">1231</div>
+                        <div id="description_home">13213</div>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,10 @@
                         <div id="title_left" class="card-title drinksText"></div>
                         <div id="subTitle_left" class="card-subtitle drinksText"></div>
                         <div id="description_left" class="card-text drinksText">
-                            hahahhahahhahahjowoeqorqjowr
+                            It was 1886, John Pemberton, an Atlanta pharmacist, was inspired by simple curiosity. 
+                            One afternoon, he stirred up a fragrant, caramel-coloured liquid and, when it was done, 
+                            the mixture was combined with carbonated water and sampled by customers 
+                            who all agreed - this new drink was something special!
                         </div>
                         <a href="http://www.coca-cola.co.uk/drinks/coca-cola/coca-cola"
                            class="btn btn-primary btn-responsive">Find out more ...</a>
@@ -117,7 +120,10 @@
                         <div id="title_centre" class="card-title drinksText"></div>
                         <div id="subTitle_centre" class="card-subtitle drinksText"></div>
                         <div id="description_centre" class="card-text drinksText">
-                            hahahhahahhahahjowoeqorqjowr
+                            First introduced in 1961, crisp, refreshing, clean-tasting Sprite is now 
+                            the world's leading lemon and lime flavoured soft drink and is sold in more 
+                            than 190 different countries. Sprite Zero, part of our no sugar Zero range, 
+                            offers the delicious lemon lime taste of Sprite without the sugar or calories.
                         </div>
                         <a href="http://www.coca-cola.co.uk/drinks/sprite/sprite"
                            class="btn btn-primary btn-responsive">Find out more ...</a>
@@ -136,7 +142,12 @@
                     <div class="card-body">
                         <div id="title_right" class="card-title drinksText"></div>
                         <div id="subTitle_right" class="card-subtitle drinksText"></div>
-                        <div id="description_right" class="card-text drinksText"></div>
+                        <div id="description_right" class="card-text drinksText">
+                            Dr Pepper's unique, sparkling blend of 23 fruit flavours has been around for
+                            well over a century and it's still the same, with that distinctive flavour 
+                            you just can't quite put your tongue on. It was created by Texas pharmacist 
+                            Charles Alderton in 1885.
+                        </div>
                         <a href="http://www.coca-cola.co.uk/drinks/dr-pepper/dr-pepper"
                            class="btn btn-primary btn-responsive">Find out more ...</a>
                     </div>
@@ -302,12 +313,9 @@
         <div class="navbar-text float-left copyright">
             <p><span class="align-baseline">These web pages are submitted as part requirement for the degree of Games and Multimedia Environments at the University of Sussex.  They are the product of my own labour except where indicated in the web page content. These web pages or contents may be freely copied and distributed provided the source is acknowledged | </span></p>
         </div>
-        <!--        <div class="navbar-text float-right social">-->
-        <!--            <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-google-plus fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-github-square fa-2x"></i></a>-->
-        <!--        </div>-->
+               <div class="navbar-text float-right social">
+              <a href="https://github.com/GayRy/Web-3D-Assignment-Submission"><i class="fab fa-github-square fa-2x"></i></a>
+             </div>
     </div>
 </nav>
 
