--- a/gary_app_h5/contact.html
+++ b/gary_app_h5/contact.html
@@ -128,12 +128,9 @@
         <div class="navbar-text float-left copyright">
             <p><span class="align-baseline">These web pages are submitted as part requirement for the degree of Games and Multimedia Environments at the University of Sussex.  They are the product of my own labour except where indicated in the web page content. These web pages or contents may be freely copied and distributed provided the source is acknowledged | </span></p>
         </div>
-        <!--        <div class="navbar-text float-right social">-->
-        <!--            <a href="#"><i class="fab fa-facebook-square fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-google-plus fa-2x"></i></a>-->
-        <!--            <a href="#"><i class="fab fa-github-square fa-2x"></i></a>-->
-        <!--        </div>-->
+               <div class="navbar-text float-right social">
+              <a href="https://github.com/GayRy/Web-3D-Assignment-Submission"><i class="fab fa-github-square fa-2x"></i></a>
+             </div>
     </div>
 </nav>
 
