--- a/gary_app_h5/about.html
+++ b/gary_app_h5/about.html
@@ -77,9 +77,9 @@
             <div class="col-sm-12">
                 <div id="main_3d_image">
                     <div id="main_text" class="col-xs-12 col-sm-4">
-                        <div id="title_home"></div>
-                        <div id="subTitle_home"></div>
-                        <div id="description_home"></div>
+                        <div id="title_home">Coca Cola Great Britain</div>
+                        <div id="subTitle_home">Founded by Dr John S Pemberton</div>
+                        <div id="description_home">The Coca Cola Company is the world's leading manufacturer, marketer and distributor of non-alcoholic beverage concentrates and syrups, and produces nearly 400 brands.</div>
                     </div>
                 </div>
             </div>
