--- a/gary_app_h5/index.html
+++ b/gary_app_h5/index.html
@@ -77,9 +77,9 @@
             <div class="col-sm-12">
                 <div id="main_3d_image">
                     <div id="main_text" class="col-xs-12 col-sm-4">
-                        <div id="title_home">12313</div>
-                        <div id="subTitle_home">1231</div>
-                        <div id="description_home">13213</div>
+                        <div id="title_home">Coca Cola Great Britain</div>
+                        <div id="subTitle_home">Founded by Dr John S Pemberton</div>
+                        <div id="description_home">The Coca Cola Company is the world's leading manufacturer, marketer and distributor of non-alcoholic beverage concentrates and syrups, and produces nearly 400 brands.</div>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,9 @@
                              src="./images/coca_cola.jpg" alt="Coca Cola">
                     </a>
                     <div class="card-body">
-                        <div id="title_left" class="card-title drinksText"></div>
+                        <div id="title_left" class="card-title drinksText">
+                            Coca Cola
+                        </div>
                         <div id="subTitle_left" class="card-subtitle drinksText"></div>
                         <div id="description_left" class="card-text drinksText">
                             It was 1886, John Pemberton, an Atlanta pharmacist, was inspired by simple curiosity. 
@@ -117,7 +119,9 @@
                              alt="Sprite">
                     </a>
                     <div class="card-body">
-                        <div id="title_centre" class="card-title drinksText"></div>
+                        <div id="title_centre" class="card-title drinksText">
+                            Sprite
+                        </div>
                         <div id="subTitle_centre" class="card-subtitle drinksText"></div>
                         <div id="description_centre" class="card-text drinksText">
                             First introduced in 1961, crisp, refreshing, clean-tasting Sprite is now 
@@ -140,7 +144,9 @@
                              src="./images/dr_pepper.jpg" alt="Dr Pepper">
                     </a>
                     <div class="card-body">
-                        <div id="title_right" class="card-title drinksText"></div>
+                        <div id="title_right" class="card-title drinksText">
+                            Dr.Pepper
+                        </div>
                         <div id="subTitle_right" class="card-subtitle drinksText"></div>
                         <div id="description_right" class="card-text drinksText">
                             Dr Pepper's unique, sparkling blend of 23 fruit flavours has been around for
